2007-01-27  Andreas Røsdal  <andreasr@gnome.org>

	* src/lib/gsudoku.py: Prevent exception from occuring when
	clicking on the autofill button, when nothing is selected.
	Closes Bug #400279.

2007-01-15  Thomas M. Hinkle  <thinkle@cvs.gnome.org>

	* src/lib/gnome_sudoku.py Wrap methods that bring up a "swallowed
	dialog" (New Game, etc.) with a decorator that inactivates widgets
	that would lead to a confused state for gnome sudoku (e.g. don't
	allow the user to go two levels deep into "New Game" dialogs,
	don't allow them to "print" a game that isn't visible, etc.). This
	fixes bug #392997.

	Clear history when starting new game or opening game (#388744)
	
	* src/lib/gtk_goodies/Undo.py Add clear() method to undo history
	list.

2007-01-15  Thomas M. Hinkle  <thinkle@cvs.gnome.org>

	* src/lib/gnome_sudoku.py Use new add_value_to_ui method for
	inserting values in squares on an "undo" of clearing the
	grid. This method will re-insert values whether or not they were
	valid parts of the grid.

	* src/lib/gsudoku.py When clearing the grid, clear all
	user-entered values, whether or not they are part of our internal
	grid (or internal grid doesn't stores values that were invalid
	when entered). Add new add_value_to_ui convenience method for
	adding a value to the entry whether or not its valid. Use
	entry_validate to add previously-conflicting values to our
	internal grid when the conflicting value is deleted; this gives us
	error handling for free in case other conflicts arise (should fix
	bug #396823).
	
2007-01-07  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-sudoku.desktop.in: Add missing bugzilla stuff.

2007-01-05  Andreas Røsdal  <andreasr@gnome.org>

	* glade/puzzle_generator.glade: Change shortcuts in gnome-sudoku:
	Set alt+v to "Very hard" and alt+u to "Generate new puzzles until
	stopped". Patch from Thomas Andersen in Bug #392172.

2007-01-05  Andreas Røsdal  <andreasr@gnome.org>

	* src/lib/sudoku_generator_gui.py: Add a temporary solution